--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
         </div>
     </section>
-
+<!--
     <section class="gallery" id="gallery">
         <div class="wrapper">
             <div class="section-title">
@@ -365,7 +365,7 @@
             </div>
         </div>
     </section>
-
+-->
     
     <section class="contact" id="contact">
         <div class="contact__map">
@@ -374,24 +374,24 @@
         <div class="contact__form">
             <div class="section-title">
                 <hr>
-                <h2>Get In Touch</h2>
+                <h2>Зв'язатись з нами</h2>
             </div>
 
             <div class="contact__form-container">
                 <div class="contact__form-contacts">
                     <a href="#">
                         <img src="assets/icons/contacts/geo.svg" alt="location-icon">
-                        91 Nolan Extensions Suite 670
+                        18028 Черкаси, вул. Пушкіна, д.Колотушкіна
                     </a>
 
                     <a href="#">
                         <img src="assets/icons/contacts/phone.svg" alt="phone-icone">
-                        +001 356-868-2454
+                        +38 050 65 95 282
                     </a>
 
                     <a href="#">
                         <img src="assets/icons/contacts/mail.svg" alt="mail-icon">
-                        montichello@service.com
+                        blablablao@service.com
                     </a>
 
                     <a href="#">
@@ -402,10 +402,10 @@
     
                 <div class="contact__form-registration">
                     <form action="#">
-                        <input class="form-input" type="text" placeholder="Mollie Medina" required>
+                        <input class="form-input" type="text" placeholder="Василь Пупко" required>
                         <input class="form-input mail-input" type="email" placeholder="Email">
                         <div class="input-error"></div>
-                        <button class="button" type="submit">Submit</button>
+                        <button class="button" type="submit">Відправити</button>
                     </form>
                 </div>
             </div>
