--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                         <svg class="header__menu-bullet">
                             <use xlink:href="assets/icons/bullet.svg#bullet"></use>
                         </svg>
-                        <a href="#projects">Проекти</a>
+                        <a href="#projects">Послуги</a>
                     </li>
                     <li class="header__menu-item">
                         <svg class="header__menu-bullet">
                             <use xlink:href="assets/icons/bullet.svg#bullet"></use>
                         </svg>
-                        <a href="#news">Послуги</a>
+                        <a href="#news">Проекти</a>
                     </li>
                     <li class="header__menu-item">
                         <svg class="header__menu-bullet">
@@ -57,7 +57,6 @@
                             <use xlink:href="assets/icons/sprite.svg#facebook"></use>
                         </svg>
                     </a>
-    
                     <a href="#">
                         <svg class="header__social-icon">
                             <use xlink:href="assets/icons/sprite.svg#twitter"></use>
@@ -415,7 +414,7 @@
 
     <footer class="footer">
         <div class="footer__credits">
-            <img src="assets/img/logo.png" alt="main-logo">
+            <img src="assets/img/logo-sms.png" alt="main-logo">
             <p class="footer__credits-copywrite">
                 Copyrights © 2023 Усі права захищені
             </p>
